# django_models

./: README.md  db.sqlite3  manage.py  pyproject.toml
django_file_project/: asgi.py  settings.py  urls.py  wsgi.py
snacks/: models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
templates/: base.html  details.html  list.html
